--- a/Task1/task1.tex
+++ b/Task1/task1.tex
@@ -49,15 +49,17 @@ This report covers the design and implementation details for Cloud Computing Cap
 \end{itemize}
  
 \section{Data Cleanup}
-\par The first task is to clean and store the dataset. We  first retrieve and extract the dataset from the EBS volume snapshot by following steps in \url{http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-restoring-volume.html}. One key thing to note is that we need to create EC2 instance in the same region and availabbility zone as the data EBS snapshot (snap-e1608d88 in us-east-1d).   
-\par Afterwards, we explore the data set and decide on how we wish to clean it. Then we ignore unrelated rows and extract only the columns from the csv files. The raw data is in \path{/data/aviation/airline_ontime} directory. 
-\par Approaches: Two ways have been used to do the cleanup: 
+The first task is to clean and store the dataset. We  first retrieve and extract the dataset from the EBS volume snapshot by following steps in \url{http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-restoring-volume.html}. One key thing to note is that we need to create EC2 instance in the same region and availabbility zone as the data EBS snapshot (snap-e1608d88 in us-east-1d).   
+
+Afterwards, we explore the data set and decide on how we wish to clean it. Then we ignore unrelated rows and extract only the columns from the csv files. The raw data is in \path{/data/aviation/airline_ontime} directory. 
+
+Approaches: Two ways have been used to do the cleanup: 
 \begin{itemize} 
 \item A python script is developed on top of \href{https://docs.python.org/2/library/csv.html}{python CSV package} to achieve this. 
 \item Pig script, see \url{https://pig.apache.org/} for details. 
 \end{itemize}
 
-\par Such data cleanup is a one-time job and below are the fields we extracted: 
+ Such data cleanup is a one-time job and below are the fields we extracted: 
 \begin{itemize}
 \item       AirlineID:chararray, --a8
 \item       Carrier:chararray,   --a9
@@ -70,7 +72,7 @@ This report covers the design and implementation details for Cloud Computing Cap
 \item       ArrDel15:float       --a39
 \end{itemize}
 
-\par The cleaned data are stored on HDFS via below hdfs dfs command  as tab delimetered fields with each line indicating one flight. 
+The cleaned data are stored on HDFS via below hdfs dfs command  as tab delimetered fields with each line indicating one flight. 
 \begin{lstlisting}{centered}
 	hdfs dfs -copyFromLocal <local files> <hdfs dir>  
 \end{lstlisting}
@@ -82,10 +84,19 @@ Hadoop Yarn runs and serves as the resource manager and application manager. Bel
 
 \href{https://blog.insightdatascience.com/spinning-up-a-free-hadoop-cluster-step-by-step-c406d56bae42}{Spinning Up a Free Hadoop Cluster: Step by Step}
 
-
 \subsection{Cassandra} 
 Cassandra cluster is deployed on the three Hadoop datanodes to provide data replication and scalability. 
 The cluster run on the same rack and utilizes GossipingPropertyFileSnitch scheme. One of the nodes is assigned as the seed provider.
+ 
+
+
+\begin{figure}
+\centering
+\includegraphics[width=\linewidth,,keepaspectratio]{aws_instances.png}
+\caption{AWS Instances for This Project.}
+\label{fig:verticalcell}
+\end{figure}
+ 
  
 \section{Group 1 Problems} 
 
@@ -96,22 +107,16 @@ Solution: We extracted the origin and destination city of the flight for each li
 hadoop fs -cat /output/of/wordcount/part* | sort -n -k2 -r | head -n20
 \end{lstlisting}
 Alternatively, the top N problem can be solved via \href{https://github.com/adamjshook/mapreducepatterns/blob/master/MRDP/src/main/java/mrdp/ch3/TopTenDriver.java}{this MapReduce design pattern}. 
-
 \item Problem 1.2: Rank the top 10 airlines by on-time arrival performance
 In the map phase, we generate (airline, 1, delay). In the reduce phase, we use two maps: (airline, count), and (airline, total delay) and accumulate counter and delay into these two maps. Then we calculate arrival performance and sort them. Alternatively and if there are multiple reducers, we will use commands similar as in above problem to do sorting. 
-
 \item Problem 1.3: Rank the days of the week by on-time arrival performance
 This is a similar problem as Problem 1.2. We use (weekday, delay) as input data. In the map phase, we generate (weekday, 1, delay). In the reduce phase, we use two maps: (weekday, count), and (weekday, total delay) and accumulate counter and delay into these two maps. Then we calculate arrival performance and sort them.   
-
 \end{itemize}
  
 \section{Group 2 Problems}
  
 \begin{itemize} 
-\item For each airport X, rank the top-10 carriers in decreasing order of on-time departure performance from X.
-
-We use Pig Latin script to generate the results into HDFS files and then store them into Cassandra database for queries. Below is the script: 
-
+\item For each airport X, rank the top-10 carriers in decreasing order of on-time departure performance from X. We use Pig Latin script to generate the results into HDFS files and then store them into Cassandra database for queries. Below is the script: 
 \small\begin{verbatim}
 in  = LOAD '$PIG_IN_DIR' AS 
           ( AirlineID:chararray, --a8
@@ -124,24 +129,18 @@ in  = LOAD '$PIG_IN_DIR' AS
             ArrDelay:float,      --a37 
             ArrDel15:float       --a39
           );
-	
 group_by_origin_airline = GROUP in BY (Origin, Carrier, AirlineID);
-
 average_ontime = FOREACH group_by_origin_airline 
                  GENERATE FLATTEN(group) AS (Origin, Carrier, AirlineID), 
                           AVG(in.DepDelay) AS performance_index;
-
 group_by_origin = GROUP average_ontime BY Origin; 
- 
 top_ten_airlines = FOREACH group_by_origin {
    sorted_airlines = ORDER average_ontime BY performance_index ASC;
    top_airlines = LIMIT sorted_airlines 10;
    GENERATE FLATTEN(top_airlines);
 }
 
-X = FOREACH top_ten_airlines GENERATE TOTUPLE( \
-TOTUPLE( 'origin',$0), TOTUPLE( 'carrier',$1),\
-TOTUPLE('airline', $2 )), TOTUPLE($3);
+X = FOREACH top_ten_airlines GENERATE $0, $1, $2, $3;
 
 STORE X into '$PIG_OUT_DIR'; 
 \end{verbatim}
@@ -164,9 +163,7 @@ top_ten_airports = FOREACH group_by_origin {
    GENERATE FLATTEN(top_airports);
 }
 
-X = FOREACH top_ten_airports GENERATE TOTUPLE( \
-TOTUPLE( 'origin',$0), TOTUPLE('dest', $1 )), \
-TOTUPLE($2);
+X = FOREACH top_ten_airports GENERATE $0, $1, $2;
 
 STORE X into '$PIG_OUT_DIR'; 
 \end{verbatim}
@@ -190,9 +187,7 @@ top_ten_airlines = FOREACH group_by_origin_dest {
    GENERATE FLATTEN(top_airlines);
 }
 
-X = FOREACH top_ten_airlines GENERATE TOTUPLE( \
-TOTUPLE('origin',$0), TOTUPLE('dest', $1),TOTUPLE(\
-'airline', $2 )), TOTUPLE($3);
+X = FOREACH top_ten_airlines GENERATE $0, $1, $2, $3;
 
 STORE X into '$PIG_OUT_DIR';
 \end{verbatim}
@@ -204,7 +199,7 @@ STORE X into '$PIG_OUT_DIR';
 
 \section{Group 3 Problems}
 \begin{itemize}
-\item 1. Does the popularity distribution of airports follow a Zipf distribution? If not, what distribution does it follow?
+\item Problem 3.1. Does the popularity distribution of airports follow a Zipf distribution? If not, what distribution does it follow?
 
 Zipf’s law stats that given some corpus or natural language utterances, the frequency of any word is inversely proportional to its rank in the frequency table. In our case it means that the airport with a higher rank should have a double number of flights compare with the next airport in rank. Even if from the Flights by Airport figure we can hope for a Zipf distribution, after
 doing a log-log plot we can see that Airports rank by number of flights is not following this distribution (log log for Zipf should be a straight line and is not). gnuplot tool is used to do plotting and it can be proven that this distribution is not Zipf but more a Lognormal one since the bottom half look very different than the top half. 
@@ -216,11 +211,12 @@ doing a log-log plot we can see that Airports rank by number of flights is not f
 \label{fig:verticalcell}
 \end{figure}
 
-\item 2. Tom wants to travel from airport X to airport Z. However, Tom also wants to stop at airport Y for some sightseeing on the way. More concretely, Tom has the following requirements (see Task 1 Queries for specific queries):
+\item Problem 3.2. Tom wants to travel from airport X to airport Z. However, Tom also wants to stop at airport Y for some sightseeing on the way. More concretely, Tom has the following requirements (see Task 1 Queries for specific queries):
 \begin{itemize}
 \item A. The second leg of the journey (flight Y-Z) must depart two days after the first leg (flight X-Y). For example, if X-Y departs January 5, 2008, Y-Z must depart January 7, 2008.
 \item B. Tom wants his flights scheduled to depart airport X before 12:00 PM local time and to depart airport Y after 12:00 PM local time.
 \item C. Tom wants to arrive at each destination with as little delay as possible.
+
 It is solved by creating two MapReduce Jobs. One which filter the
 flights by arrival performance and the second one which computes the options Tom has and pick up the best one based on arrival performance. For the first map reduce the key is based on Origin, Destination and FlightDate. In the second MapReduce we will receive a list of best arrival flights grouped by Origin-Destination-Date and from here using the 12h departure condition we can generate for each day all the options Tom has.
 \end{itemize}
@@ -235,10 +231,10 @@ flights by arrival performance and the second one which computes the options Tom
 
 \end{itemize} 
  
-\section{Code and Code Location}
+\section{Code and Video Location}
 \begin{itemize}
-\item \url{https://github.com/myhangshi/ccompute}
-\item \url{https://vimeo.com/241272936}
+\item Code:    \url{https://github.com/myhangshi/ccompute}
+\item Video:   \url{https://vimeo.com/241272936}
 \end{itemize} 
  
 
