--- a/Task2/task2.tex
+++ b/Task2/task2.tex
@@ -14,9 +14,23 @@
 }
 \frenchspacing 
 
-%\author{Hang Shi}
-\title{Cloud Computing Project Task 2 Report}
-\date{}
+%%% Maketitle metadata
+\newcommand{\horrule}[1]{\rule{\linewidth}{#1}} 	
+
+\title{
+		%\vspace{-1in} 	
+		\usefont{OT1}{bch}{b}{n}
+		\normalfont \normalsize \textsc
+		{Coursera Course: Cloud Computing} \\ [25pt]
+		\horrule{0.5pt} \\[0.4cm]
+		\huge Capstone Project Task 2 Report \\
+		\horrule{2pt} \\[0.5cm]
+}
+\author{
+		\normalfont 	\normalsize
+        Hang Shi\\[-3pt] \normalsize        
+}
+\date{\today}
 
 \begin{document}
 \maketitle
@@ -172,7 +186,7 @@ CREATE TABLE test.g3e2 (route text, delay float, details text, f1 text, f2 text,
 \section{Code and Video Location}
 \begin{itemize}
 \item Code:    \url{https://github.com/myhangshi/ccompute}
-\item Video:   \url{https://vimeo.com/241272936}
+\item Video:   \url{https://vimeo.com/243786081}
 \end{itemize} 
 
 
